finished home, menu and team

--- a/css/application.scss
+++ b/css/application.scss
@@ -1,4 +1,10 @@
-@import "components/fonts";
 @import "components/variables";
+@import "components/fonts";
 @import "components/layout";
+@import "components/nav";
 @import "components/landing";
+@import "components/menus";
+@import "components/team";
+@import "components/hours";
+@import "components/events";
+@import "components/contact";
