--- a/css/components/fonts.scss
+++ b/css/components/fonts.scss
@@ -1,1 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
+
+
+.green-text {
+  color: $green;
+}
+
+.red-text {
+  color: $red;
+}
+
+.yellow-text {
+  color: $yellow;
+}
