--- a/css/components/variables.scss
+++ b/css/components/variables.scss
@@ -12,4 +12,5 @@ $white: #FFFFFF;
 
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1100px;
+$breakpoint-large: 1280px;
 $min-window-height: 550px;
