working through site

--- a/css/application.scss
+++ b/css/application.scss
@@ -1,6 +1,7 @@
 @import "components/variables";
 @import "components/fonts";
 @import "components/layout";
+@import "components/links";
 @import "components/nav";
 @import "components/landing";
 @import "components/menus";
