--- a/css/components/contact.scss
+++ b/css/components/contact.scss
@@ -6,16 +6,50 @@
     margin-bottom: 15px;
   }
 
+  h6 {
+    font-size: 18px;
+    font-weight: 700;
+  }
+
   .address {
-    h6, a {
+    text-decoration: none;
+    h6 {
       font-size: 18px;
+      display: inline-block;
       text-decoration: none;
       font-weight: 300;
-      display: block;
+
+      &:first-child {
+        margin-top: 10px;
+      }
     }
+  }
+
+  .telephone-link {
+    margin-top: 20px;
     a {
+      text-decoration: none;
+      font-size: 18px;
+      color: $black;  
       margin-top: 15px;
       font-weight: 100;
+    }
+  }
+
+  .map-container {
+    height: 350px;
+    margin-top: 35px;
+  }
+
+  .map-container {
+    width: 80%;
+    margin: 0 10%;
+    height: 300px;
+    margin-top: 25px;
+
+    #goog-map {
+      width: 100%;
+      height: 100%;
     }
   }
 
@@ -25,30 +59,53 @@
       margin-bottom: 25px;
     }
 
-    .address {
-      h6, a {
-        font-size: 22px;
-      }
+    h6 {
+      font-size: 24px;
+    }
 
-      a {
-        margin-top: 20px;
+    .address {
+      h6 {
+        font-size: 24px;
       }
     }
+
+    .telephone-link {
+      margin-top: 25px;
+      a {
+        font-size: 20px;
+      }
+    }
+
+    .map-container {
+      height: 350px;
+      margin-top: 35px;
+    }
   }
+
 
   @media (min-width: $breakpoint-desktop) {
     h5 {
       font-size: 30px;
     }
 
-    .address {
-      h6, a {
-        font-size: 28px;
-      }
+    h6 {
+      font-size: 28px;
+    }
 
-      a {
-        margin-top: 25px;
+    .address {
+      h6 {
+        font-size: 26px;
       }
+    }
+
+    .telephone-link {
+      a {
+        font-size: 22px;
+      }
+    }
+
+    .map-container {
+      height: 400px;
     }
   }
 }
