--- a/css/components/menus.scss
+++ b/css/components/menus.scss
@@ -13,7 +13,7 @@
     text-decoration: none;
     font-size: 25px;
     font-weight: 500;
-    display: block;
+    display: inline-block;
     margin-top: 15px;
   }
 
