working through contact form

--- a/css/components/variables.scss
+++ b/css/components/variables.scss
@@ -1,4 +1,4 @@
-//Colors
+//Colors//
 
 $yellow: #E2A02D;
 $green: #1A7A67;
@@ -15,3 +15,4 @@ $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1100px;
 $breakpoint-large: 1280px;
 $min-window-height: 550px;
+
