--- a/css/components/events.scss
+++ b/css/components/events.scss
@@ -24,23 +24,23 @@
     width: 100%;
     text-align: center;
     margin-top: 20px;
+    display: flex;
 
-    img {
-      width: 32%;
-      
-      &:first-child {
-        max-width: 460px;
-      }
+    #event-photo-one, #event-photo-three {
+      width: 35%
+    }
 
-      &:nth-child(2) {
-        max-width: 230px;
-        
-      }
+    #event-photo-two {
+      width: 25%;
+    }
 
-      &:nth-child(3) {
-        max-width: 460px;
+    .event-photo {
+      img {
+        width: 100%;
+        height: auto;
       }
     }
+    
 
     @media (min-width: $breakpoint-tablet) {
       margin-top: 40px;
