--- a/css/main.css
+++ b/css/main.css
@@ -227,15 +227,15 @@ body {
   height: 375px;
   width: 100%;
   text-align: center;
-  margin-top: 20px; }
-  .events-section .events-photos img {
-    width: 32%; }
-    .events-section .events-photos img:first-child {
-      max-width: 460px; }
-    .events-section .events-photos img:nth-child(2) {
-      max-width: 230px; }
-    .events-section .events-photos img:nth-child(3) {
-      max-width: 460px; }
+  margin-top: 20px;
+  display: flex; }
+  .events-section .events-photos #event-photo-one, .events-section .events-photos #event-photo-three {
+    width: 35%; }
+  .events-section .events-photos #event-photo-two {
+    width: 25%; }
+  .events-section .events-photos .event-photo img {
+    width: 100%;
+    height: auto; }
   @media (min-width: 768px) {
     .events-section .events-photos {
       margin-top: 40px; } }
@@ -323,5 +323,16 @@ body {
     cursor: pointer;
     font-size: 10px;
     margin-right: 15px; }
+
+#contactForm .form-side {
+  width: 100%; }
+  @media (min-width: 768px) {
+    #contactForm .form-side {
+      width: 49%;
+      display: inline-block; } }
+#contactForm .form-group label, #contactForm .form-group input {
+  display: block; }
+#contactForm .form-group label {
+  text-transform: uppercase; }
 
 /*# sourceMappingURL=main.css.map */
