mobile and working on scroll links

--- a/css/components/landing.scss
+++ b/css/components/landing.scss
@@ -12,13 +12,15 @@
   h1 {
     font-size: 50px;
     color: $yellow;
+    display: none;
     @media (min-width: $breakpoint-tablet) {
       font-size: 60px;
+      display: block;
     }
     @media (min-width: $breakpoint-desktop) {
       font-size: 80px;
     }
-    
+
   }
   .landing-content {
     position: relative;
