--- a/css/components/events.scss
+++ b/css/components/events.scss
@@ -4,6 +4,7 @@
     font-size: 20px;
     font-weight: 300;
     max-width: 800px;
+    text-align: center;
     margin: 0 auto;
 
     span {
@@ -22,7 +23,7 @@
   .events-photos {
     width: 100%;
     text-align: center;
-    margin-top: 20px;
+    margin: 20px 0;
     display: flex;
 
     #event-photo-one {
@@ -31,7 +32,7 @@
 
     #event-photo-two {
       flex: 0.181374077;
-      padding: 0 10px;
+      padding: 0 5px;
     }
 
     #event-photo-three {
@@ -48,7 +49,7 @@
     
 
     @media (min-width: $breakpoint-tablet) {
-      margin-top: 40px;
+      margin: 40px 0;
     }
   }
 
