finished gallery slider

--- a/css/components/nav.scss
+++ b/css/components/nav.scss
@@ -61,6 +61,7 @@
 
       .navigation-link.logo-link {
         width: 75px;
+        display: inline-block;
 
         img {
           width: 100%;
