--- a/css/components/events.scss
+++ b/css/components/events.scss
@@ -1,3 +1,5 @@
+
+
 .events-section {
 
   h4 {
@@ -20,36 +22,56 @@
     text-transform: uppercase;
   }
 
-  .events-photos {
-    width: 100%;
-    text-align: center;
-    margin: 20px 0;
-    display: flex;
-
-    #event-photo-one {
-      flex: 0.409267735;
+  .event-image-slider {
+    .slick-slide {
+      pointer-events: none;
     }
 
-    #event-photo-two {
-      flex: 0.181374077;
-      padding: 0 5px;
+    .slick-prev {
+      left: 25px;
     }
 
-    #event-photo-three {
-      flex: 0.409358188;
+    .slick-next {
+      right: 25px;
     }
 
-    .event-photo {
+    .slick-arrow {
+      width: 25px;
+      height: 25px;
+      z-index: 100;
 
-      img {
-        width: 100%;
-        height: auto;
+      &::before {
+        font-size: 25px;
+        opacity: 1;
       }
     }
-    
+
+    img {
+      height: 300px;
+      border-left: 2px solid $white;
+    }
 
     @media (min-width: $breakpoint-tablet) {
-      margin: 40px 0;
+      .slick-prev {
+        left: 50px;
+      }
+
+      .slick-next {
+        right: 50px;
+      }
+
+      .slick-arrow {
+        width: 50px;
+        height: 50px;
+
+        &::before {
+          font-size: 50px;
+        }
+      }
+
+      img {
+        height: 400px;
+      }
     }
   }
 
