--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,8 @@ body {
         #navigation .navgiation-links .navigation-link a {
           font-size: 22px; }
       #navigation .navgiation-links .navigation-link.logo-link {
-        width: 75px; }
+        width: 75px;
+        display: inline-block; }
         #navigation .navgiation-links .navigation-link.logo-link img {
           width: 100%; } }
   @media (min-width: 1100px) {
@@ -230,24 +231,34 @@ body {
   cursor: pointer;
   font-weight: 300;
   text-transform: uppercase; }
-.events-section .events-photos {
-  width: 100%;
-  text-align: center;
-  margin: 20px 0;
-  display: flex; }
-  .events-section .events-photos #event-photo-one {
-    flex: 0.409267735; }
-  .events-section .events-photos #event-photo-two {
-    flex: 0.181374077;
-    padding: 0 5px; }
-  .events-section .events-photos #event-photo-three {
-    flex: 0.409358188; }
-  .events-section .events-photos .event-photo img {
-    width: 100%;
-    height: auto; }
-  @media (min-width: 768px) {
-    .events-section .events-photos {
-      margin: 40px 0; } }
+.events-section .event-image-slider .slick-slide {
+  pointer-events: none; }
+.events-section .event-image-slider .slick-prev {
+  left: 25px; }
+.events-section .event-image-slider .slick-next {
+  right: 25px; }
+.events-section .event-image-slider .slick-arrow {
+  width: 25px;
+  height: 25px;
+  z-index: 100; }
+  .events-section .event-image-slider .slick-arrow::before {
+    font-size: 25px;
+    opacity: 1; }
+.events-section .event-image-slider img {
+  height: 300px;
+  border-left: 2px solid #FFFFFF; }
+@media (min-width: 768px) {
+  .events-section .event-image-slider .slick-prev {
+    left: 50px; }
+  .events-section .event-image-slider .slick-next {
+    right: 50px; }
+  .events-section .event-image-slider .slick-arrow {
+    width: 50px;
+    height: 50px; }
+    .events-section .event-image-slider .slick-arrow::before {
+      font-size: 50px; }
+  .events-section .event-image-slider img {
+    height: 400px; } }
 @media (min-width: 768px) {
   .events-section h4 {
     font-size: 25px; }
