--- a/css/components/variables.scss
+++ b/css/components/variables.scss
@@ -1,6 +1,7 @@
 //Colors//
 
 $yellow: #E2A02D;
+$dark-yellow: #C88E28;
 $green: #1A7A67;
 $dark-green: #0C3A31;
 $red: #BE1818;
@@ -11,6 +12,7 @@ $white: #FFFFFF;
 
 //Breakpoints//
 
+$breakpoint-form: 550px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1100px;
 $breakpoint-large: 1280px;
